상수 추가 예산 상세 보기 추가 캘린더 지출 표시 추가 코드 정리 및 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,12 @@ spring.datasource.password=test1234!
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
 spring.jpa.databasePlatform=org.hibernate.dialect.MariaDBDialect
 
 # Deploy
 spring.thymeleaf.cache=true
 spring.datasource.url=jdbc:mariadb://192.168.0.7:13306/account_bank
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=false
